HA: Fixed some spacing

--- a/src/container/HeroSection/index.module.scss
+++ b/src/container/HeroSection/index.module.scss
@@ -26,7 +26,7 @@
     }
 
     .title {
-      margin: 3.2rem auto 12rem;
+      margin: 3.2rem auto 6.4rem;
       max-width: 80rem;
 
       @media (max-width: 768px) {
